[project]
name = "ha-previous-day-statistics"
version = "0.0.0"
description = "Home Assistant custom integration: previous day statistics."
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-homeassistant-custom-component>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
]
pythonpath = [
  ".",
]
